--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,11 @@
   --font-mono: var(--font-geist-mono);
 }
 
+@theme {
+  --color-gray-background: oklch(0.1722 0.0041 106.82);
+  --color-red-primary: oklch(0.5537 0.1953 26.41);
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
