--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,9 @@
 @theme {
   --color-gray-background: oklch(0.1722 0.0041 106.82);
   --color-red-primary: oklch(0.5537 0.1953 26.41);
+  --color-red-secondary: oklch(0.6828 0.2066 30.81);
+  --color-bone-white:#d9d7cb;
+  --color-ash-gray: #211e1f;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -28,4 +31,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.video-mask {
+  mask-image: radial-gradient(circle, black 70%, transparent 100%);
 }
